# SJAndroidBilling

./: README.md  pyproject.toml  setup.py
demo/: buildozer.spec  main.py
sjbilling/: __init__.py  jclass.py  jinterface.py
