[tool.poetry]
name = "sjbilling"
version = "2022.1.0"
description = "port google play billing (android) to python"
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pyjnius = "^1.4.2"
kvdroid = {url = "https://github.com/kvdroid/Kvdroid/archive/refs/heads/master.zip"}


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
